[package]
name = "cfg-elif"
description = "Conditional compilation in expressions"
version = "0.6.2"
edition = "2024"
license-file = "./UNLICENSE"
repository = "https://github.com/raviqqe/cfg-elif"

[features]
foo = []
bar = []
baz = []

[workspace.lints.rust]
missing_docs = "deny"
warnings = "deny"
