[package]
name = "cfg-elif"
description = "Formatter-friendly conditional compilation at item and expression positions"
version = "0.6.3"
edition = "2024"
license-file = "./UNLICENSE"
repository = "https://github.com/raviqqe/cfg-elif"

[features]
foo = []
bar = []
baz = []

[workspace.lints.rust]
missing_docs = "deny"
warnings = "deny"
