[package]
name = "cfg-elif"
version = "0.6.4"
edition = "2024"
description = "Formatter-friendly conditional compilation at item and expression positions"
repository = "https://github.com/raviqqe/cfg-elif"
license-file = "./UNLICENSE"

[features]
bar = []
baz = []
foo = []

[lints.rust]
missing_docs = "deny"
warnings = "deny"
